[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.95)
border_color = Color(0.25, 0.25, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 30.0
content_margin_top = 20.0
content_margin_right = 30.0
content_margin_bottom = 20.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="Sep1" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SensitivityRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/SensitivityRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "Mouse Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="CenterContainer/Panel/VBox/SensitivityRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="SensitivityValue" type="Label" parent="CenterContainer/Panel/VBox/SensitivityRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "1.0"
horizontal_alignment = 2

[node name="MasterRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/MasterRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/Panel/VBox/MasterRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="MasterValue" type="Label" parent="CenterContainer/Panel/VBox/MasterRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "80%"
horizontal_alignment = 2

[node name="SFXRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/SFXRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/Panel/VBox/SFXRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXValue" type="Label" parent="CenterContainer/Panel/VBox/SFXRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "80%"
horizontal_alignment = 2

[node name="FullscreenRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/FullscreenRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckButton" parent="CenterContainer/Panel/VBox/FullscreenRow"]
unique_name_in_owner = true
layout_mode = 2

[node name="FOVRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/FOVRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "Field of View"

[node name="FOVSlider" type="HSlider" parent="CenterContainer/Panel/VBox/FOVRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 60.0
max_value = 120.0
step = 1.0
value = 75.0

[node name="FOVValue" type="Label" parent="CenterContainer/Panel/VBox/FOVRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "75"
horizontal_alignment = 2

[node name="VSyncRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBox/VSyncRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
text = "VSync"

[node name="VSyncCheck" type="CheckButton" parent="CenterContainer/Panel/VBox/VSyncRow"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="Sep2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Back"
